# markdown-playground

./: docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
dockerfiles/: Dockerfile
scripts/: docker-pre-build.sh  init.sh
